[tool.poetry]
name = "anc2vec"
version = "0.1.0"
description = "Neural-based approach for constructing embeddings of GO terms."
authors = ["Alejandro A. Edera <aedera@sinc.unl.edu.ar>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
anc2vec = { path = ".", editable = true }
tensorflow = "==2.14.0"
tensorflow-metal = ">=1.1.0,<2"

[tool.pixi.tasks]
run = "bash run.sh"

[tool.pixi.dependencies]
ipython = ">=8.29.0,<9"
jupyter = ">=1.1.1,<2"
wandb = "==0.18.3"
python = "==3.11"
numpy = "<2"
